# agent

./: .gitignore  ai.txt  reasonix.toml  张磊-简历.docx  电脑1-操作指南.md  电脑2-操作指南.md  第二台电脑-Git配置指南.md  项目运行指南.md
Agent-3/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT-ANALYSIS.md  README.md  docker-compose.yml  git-cheatsheet.md  implementation-plan.md  prd.md  pyproject.toml  task-breakdown.md  tech-stack.md
Agent-3/data/eval/: report_20260530_123534.json  report_20260530_125208.json  report_20260530_125428.json  report_20260530_131128.json  report_20260530_131645.json  report_20260530_132258.json  report_20260530_132418.json  report_20260530_132958.json  report_20260530_151849.json  report_routing.json  test_set.jsonl
Agent-3/data/finance/: 出差管理制度.md  报销管理制度.md  薪资结构说明.md  采购流程规范.md  (+1 more)
Agent-3/docs/: Person A 任务清单.md  Skills层设计文档.md  start-and-tunnel.txt  业务领域➕能力领域.md  功能与结构优化计划.md  后续实现.md  安全与架构优化执行计划.md  审批引擎文档.md  对话操作卡片模板.md  工单生命周期管理.md  接口协议文档.md  整体设计文档.md  系统架构文档.md  系统流程说明.md
Agent-3/frontend/: admin.html  app.js  index.html  style.css  traces.html
Agent-3/scripts/: approval_ops.py  backup_db.py  run_eval.py  seed_db.py  start_desktop.bat  start_local.bat  start_tunnel.bat  test_all_agents.py  test_base_agent.py  test_env_llm.py  test_hr_agent.py  test_rag.py  test_routing.py  ticket_ops.py  watch_kb.py
Agent-3/src/: config.py  llm_client.py  main.py
Agent-3/traces/: trace_2026-05-19.jsonl  trace_2026-05-28.jsonl  trace_2026-05-29.jsonl  trace_2026-05-30.jsonl  trace_2026-06-03.jsonl  trace_2026-06-06.jsonl  trace_2026-06-10.jsonl
(+592 files in other folders)
